
  Note that the return value of CreateFeature() is an OGRErr code and not
  a feature id as was the case with the MITAB 1.x SetFeature() implementation.
  The feature id of the created feature is returned by updating the id of the
  passed in feature instead of through the return value of the method as
  was the case with the old SetFeature() method in MITAB 1.x.

- Fixed SetTextSpacing call in mitab_c_set_text_display() method (bug 1986)

- Fixed wrong return value of IMapInfoFile::SetCharset() method (bug 1987)

- Added Visual Studio Project files in contrib/vcproj, contributed by 
  Tony Wells (bug 1877)

- Updated contrib/mitab_dyn.pas and contrib/mitab.vb for V1.7.0 changes

- Fixed const char * warnings with GCC 4.3 (GDAL ticket #2325)

- Fixed problem with corrupt pointer if file not found (bug 1899)

- Fixed tabdump build problem if DEBUG option not provided (bug 1898)

- Fixed deprecated warnings generated by mitab.h (bug 1907)

- Fixed multi-line text rendering (bug 1916) 

- Fixed multi-line text height problem (bug 1919)

- Fixed the text font size problem  (bug 1918)

- Add text outline color support (halo background in MapInfo) (bug 1921)

- Add font text styles support (bold, italic, etc.) (bug 1922)

- Added Font Point styles support (halo, border) (bug 1925)
 
- C API: Added mitab_c_get_feature_count_by_type() (bug 1952)

- Fixed bug: MITAB doesn't support writing DateTime type (bug 1948)

- Fixed bug with the characters ",\n in the tab2tab application. (bug 
  1945)
 
- mitab.h: Export MITABSpatialRef2CoordSys() and MITABCoordSys2SpatialRef()
  from the DLL.  Mostly for use in GDAL 

- Added support to use OFTDateTime/OFTDate/OFTTime type when compiled with
  OGR and fixed reading/writing support for these types. (Bug 1948 and 
  GDAL ticket #2585)

- Improved support for OGR date/time types. New Read/Write methods (bug 1948)
  Added support of OGR date/time types for MIF features.

- C API: Added mitab_c_get_table_class() (bug 1957)
