@@ -35,6 +35,8 @@ Version 2.0-dev (CVS)
   passed in feature instead of through the return value of the method as
   was the case with the old SetFeature() method in MITAB 1.x.
 
+- C API: Added mitab_c_set_charset() (bug 2013)
+
 - Fixed SetTextSpacing call in mitab_c_set_text_display() method (bug 1986)
 
 - Fixed wrong return value of IMapInfoFile::SetCharset() method (bug 1987)
@@ -947,5 +949,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.228 2009-01-23 17:04:48 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.229 2009-02-25 17:18:08 aboudreault Exp $
 ------------
